Add a simple NodeJs server and docs for testing

--- a/cert.config
+++ b/cert.config
@@ -48,8 +48,8 @@ authorityKeyIdentifier  = keyid,issuer
 #   RSA Key transport (i.e., you use ephemeral cipher suites), then
 #   omit keyEncipherment because that's key transport.
 basicConstraints    = CA:FALSE
-keyUsage            = digitalSignature
-# keyUsage            = digitalSignature, keyEncipherment
+# keyUsage            = digitalSignature
+keyUsage            = digitalSignature, keyEncipherment
 subjectAltName      = @alternate_names
 nsComment           = "OpenSSL Generated Certificate"
 
@@ -67,8 +67,8 @@ subjectKeyIdentifier    = hash
 #   RSA Key transport (i.e., you use ephemeral cipher suites), then
 #   omit keyEncipherment because that's key transport.
 basicConstraints        = CA:FALSE
-keyUsage                = digitalSignature
-# keyUsage                = digitalSignature, keyEncipherment
+# keyUsage                = digitalSignature
+keyUsage                = digitalSignature, keyEncipherment
 subjectAltName          = @alternate_names
 nsComment               = "OpenSSL Generated Certificate"
 
